update hover button

--- a/dom-projects/form/html/index.html
+++ b/dom-projects/form/html/index.html
@@ -17,14 +17,14 @@
                 <p class="register-text">
                     Already have an account?
                 </p>
-                <button class="btn" id="login-btn">Login</button>
+                <button class="btn" id="login-btn"><div>Login</div></button>
                 <p class="register-text">
                     Or
                 </p>
                 <p class="register-text" id="new-user-text">
                     Are you new here?
                 </p>
-                <button class="btn sub-btn" id="register-btn">Register</button>
+                <button class="btn sub-btn" id="register-btn"><div>Register</div></button>
             </div>
         </div>
         <div id="part-2">
