--- a/dom-projects/form/html/login.html
+++ b/dom-projects/form/html/login.html
@@ -33,7 +33,7 @@
                         </div>
                     </div>
                     <div class="error"></div>
-                    <button type="submit" name="submit" id="login-btn" class="input">Login</button>
+                    <button type="submit" name="submit" id="login-btn" class="btn"><div>Login</div></button>
                 </div>
             </form>
             <p id="register-message">
