--- a/dom-projects/form/html/register.html
+++ b/dom-projects/form/html/register.html
@@ -87,8 +87,8 @@
                     </div>
                     <div class="error"></div>
                     <div id="footer-btn">
-                        <button type="submit" name="submit" id="register-btn" class="btn">Register</button>
-                        <button type="reset" name="reset" id="reset-btn" class="btn sub-btn" class="btn">Reset</button>
+                        <button type="submit" name="submit" id="register-btn" class="btn"><div>Register</div></button>
+                        <button type="reset" name="reset" id="reset-btn" class="btn sub-btn" class="btn"><div>Reset</div></button>
                     </div>
                 </div>
             </form>
