--- a/dom-projects/form/html/register.html
+++ b/dom-projects/form/html/register.html
@@ -12,8 +12,8 @@
 </head>
 
 <body>
-    <div id="wrap" class="wrap-animation">
-        <div id="part-1" class="part-1-animation">
+    <div id="wrap">
+        <div id="part-1">
             <div id="header">
                 <a href="index.html" id="go-back-home"><i class="fas fa-arrow-left"></i></a>
                 <h1>Register</h1>
@@ -93,7 +93,7 @@
                 </div>
             </form>
         </div>
-        <div id="part-2" class="part-2-animation">
+        <div id="part-2">
         </div>
     </div>
     <script src="../js/register.js"></script>
