--- a/memory-card/index.html
+++ b/memory-card/index.html
@@ -10,8 +10,14 @@
 </head>
 
 <body>
+    <div id="start-box">
+        <div id="overlay">
+            <button id="start">
+                Start
+            </button>
+        </div>
+    </div>
     <div class="container">
-        
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
