update css and hightlight class, remaining time

--- a/memory-card/index.html
+++ b/memory-card/index.html
@@ -42,25 +42,25 @@
     </div>
     <div class="lose">
         <img src="thanos-end.png" alt="thanos-full-gem" class="thanos-end">
-        <div id="quotes">
+        <div class="quotes">
             It Nearly Killed Me
             <button class="btn end-btn try-again">
                 Try Again
             </button>
-            <button class="end-btn">
+            <!-- <button class="end-btn">
                 Bonus
-            </button>
+            </button> -->
         </div>
     </div>
     <div class="win">
-        <div id="quotes">
+        <div class="quotes">
             You win
             <button class="btn end-btn try-again">
                 Play Again
             </button>
-            <button class="end-btn">
+            <!-- <button class="end-btn">
                 Bonus
-            </button>
+            </button> -->
         </div>
     </div>
     <div class="hint">
