--- a/bootstrap_project/portfolio/index.html
+++ b/bootstrap_project/portfolio/index.html
@@ -16,7 +16,7 @@
     <section class="container-fluid position-relative">
         <div class="row">
             <div id="first-part" class="col-md-5 min-vh-100 fixed-position">
-                <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-end">
+                <nav class="navbar navbar-expand-xl navbar-light bg-light justify-content-end">
                     <button class="navbar-toggler" type="button" data-toggle="collapse"
                         data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                         aria-label="Toggle navigation">
@@ -24,19 +24,21 @@
                     </button>
                     <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
                         <div class="navbar-nav">
-                            <a class="nav-item nav-link" href="#project-anchor">Sản phẩm<span class="sr-only">(current)</span></a>
-                            <a class="nav-item nav-link" href="#">Thông tin</a>
-                            <a class="nav-item nav-link" href="#">Kinh nghiệm</a>
-                            <a class="nav-item nav-link" href="#">Kĩ năng</a>
+                            <a class="nav-item nav-link" href="#project-anchor">Sản phẩm<span
+                                    class="sr-only">(current)</span></a>
+                            <a class="nav-item nav-link" href="#about-me">Giới thiệu</a>
+                            <a class="nav-item nav-link" href="#carrer-focus">Mục tiêu</a>
+                            <a class="nav-item nav-link" href="#skills">Kỹ năng</a>
+                            <a class="nav-item nav-link" href="#exp">Kinh nghiệm làm việc</a>
                         </div>
                     </div>
                 </nav>
                 <div class="name text-center my-5">
-                    <h1>
-                        <span class="typing"></span></br>
+                    <h1 class="h1">
+                        <span class="typing text-uppercase"></span></br>
                     </h1>
                     <div>
-                        <span class="typing2"></span></br>
+                        <span class="typing2 text-uppercase"></span></br>
                     </div>
                 </div>
 
@@ -45,45 +47,53 @@
                         class="profile-image img-fluid rounded-circle img-thumbnail">
                 </div>
                 <div class="content d-flex flex-column my-5 mh-100">
-                    <div id="short-description" class="text-center mx-5">
+                    <div id="short-description" class="text text-center mx-5">
                         <p>
-                            Xin chào mọi người, tôi là Phạm&nbsp;Công&nbsp;Định. Tôi là một front-end website developer đang học tập và sinh sống tại Hà Nội.
+                            Xin chào mọi người, tôi là Phạm&nbsp;Công&nbsp;Định. Tôi là một front-end website developer
+                            đang học tập và sinh sống tại Hà Nội.
                         </p>
                     </div>
                     <div class="contact mb-3 mt-5 mw-100 container">
-                        <a href="mailto:congdinh2395@gmail.com" class="info text-decoration-none text-dark"><div id="email-icon" class="contact-icon"></div>  <span class="contact-text ml-3">congdinh2395@gmail.com</span></a>
-                    </div>
-
-                    <div class="contact mb-3 mw-100 container">
-                        <a href="tel:0365304675" class="info text-decoration-none text-dark">
-                            <div id="phone-icon" class="contact-icon"></div> <span class="contact-text ml-3">0365304675</span>
+                        <a href="mailto:congdinh2395@gmail.com" class="info text-decoration-none text-dark">
+                            <div id="email-icon" class="contact-icon"></div> <span
+                                class="contact-text mail ml-3">congdinh2395@gmail.com</span>
                         </a>
                     </div>
 
                     <div class="contact mb-3 mw-100 container">
-                        <a href="https://github.com/cody0203/cody0203.github.io" class="info text-decoration-none text-dark">
-                            <div id="github-icon" class="contact-icon"></div> <span class="contact-text ml-3">Github</span>
+                        <a href="tel:0365304675" class="info text-decoration-none text-dark">
+                            <div id="phone-icon" class="contact-icon"></div> <span
+                                class="contact-text phone ml-3">0365304675</span>
+                        </a>
+                    </div>
+
+                    <div class="contact mb-3 mw-100 container">
+                        <a href="https://github.com/cody0203/cody0203.github.io"
+                            class="info text-decoration-none text-dark">
+                            <div id="github-icon" class="contact-icon"></div> <span
+                                class="contact-text github ml-3">Github</span>
                         </a>
                     </div>
                 </div>
 
             </div>
-            <div id="part-2" class="col-md-7 ml-auto p-0">
-                <div class="project" id="project-anchor">
+            <div id="second-part" class="col-md-7 ml-auto p-0">
+                <div class="project mb-5" id="project-anchor">
                     <div class="project-item project-one position-relative">
-                        <div class="number">
+                        <div class="number-order text">
                             01.
                         </div>
                         <img src="image/calculator.png" alt="calculator" class="project-img img-fluid my-5">
-                        <a href="https://cody0203.github.io/dom-projects/calculator-basics/" class="project-link position-absolute">Calculator</a> 
-                        <div class="technology text-center">
+                        <a href="https://cody0203.github.io/dom-projects/calculator-basics/"
+                            class="project-link position-absolute">Calculator</a>
+                        <div class="technology text-center text">
                             (HTML, CSS, JS, JQuery)
                         </div>
                         <div class="overlay"></div>
                     </div>
 
                     <div class="project-item project-two position-relative">
-                        <div class="number">
+                        <div class="number-order text">
                             02.
                         </div>
                         <div class="card-wrapper my-5">
@@ -98,45 +108,172 @@
                         </div>
                         <a href="https://cody0203.github.io/memory-card/index.html"
                             class="project-link position-absolute">Marvel Memory Card</a>
-                        <div class="technology text-center">
+                        <div class="technology text-center text">
                             (HTML, CSS, JS, JQuery)
                         </div>
                         <div class="overlay"></div>
                     </div>
 
-                    <div class="project-item project-three position-relative">
-                        <div class="number">
+                    <div class="project-item project-four position-relative">
+                        <div class="number-order">
                             03.
                         </div>
-                        <img src="image/login_register_form.png" alt="login_register_form" class="project-img project-img-three img-fluid my-5 rounded-lg">
+                        <img src="image/animation_card.png" alt="login_register_form"
+                            class="project-img project-img-four img-fluid my-5 rounded-lg">
+
+                        <div class="technology text-center text">
+                            (HTML, CSS)
+                        </div>
+                        <div class="overlay"><a href="https://cody0203.github.io/dom-projects/form/html/index.html"
+                                class="project-link position-absolute">Animation
+                                Greating Card</a></div>
+                    </div>
+
+                    <div class="project-item project-three position-relative">
+                        <div class="number-order text">
+                            04.
+                        </div>
+                        <img src="image/login_register_form.png" alt="login_register_form"
+                            class="project-img project-img-three img-fluid my-5 rounded-lg">
                         <a href="https://cody0203.github.io/dom-projects/form/html/index.html"
                             class="project-link position-absolute">Login/Register Form</a>
-                        <div class="technology text-center">
+                        <div class="technology text-center text">
                             (HTML, CSS, JS)
                         </div>
                         <div class="overlay"></div>
                     </div>
 
-                    <div class="project-item project-four position-relative">
-                        <div class="number">
-                            04.
+                </div>
+
+                <div class="about mx-5" id="about-me">
+                    <h3 class="h3 text-uppercase font-weight-bold">
+                        Giới thiệu.
+                    </h3>
+
+                    <div class="infomation mt-5">
+                        <div class="infomation-paragraph">
+                            <ul class="list-unstyled">
+                                <li>
+                                    <span class="label font-weight-bold">Họ tên:</span> Phạm Công Định
+                                </li>
+
+                                <li>
+                                    <span class="label font-weight-bold">Ngày sinh:</span> 02/03/1995
+                                </li>
+
+                                <li>
+                                    <span class="label font-weight-bold">Giới tính:</span> Nam
+                                </li>
+
+                                <li>
+                                    <span class="label font-weight-bold">Điện thoại:</span> 0365304675
+                                </li>
+
+                                <li>
+                                    <span class="label font-weight-bold">Email:</span> congdinh2395@gmail.com
+                                </li>
+
+                                <li>
+                                    <span class="label font-weight-bold">Địa chỉ:</span> 38/211 Khương Trung, Thanh
+                                    Xuân, Hà
+                                    Nội
+                                </li>
+                            </ul>
+
                         </div>
-                        <img src="image/animation_card.png" alt="login_register_form"
-                            class="project-img project-img-four img-fluid my-5 rounded-lg">
-                        <a href="https://cody0203.github.io/dom-projects/form/html/index.html"
-                            class="project-link position-absolute">Animation Greating Card</a>
-                        <div class="technology text-center">
-                            (HTML, CSS)
+                    </div>
+
+                    <div class="line my-5"></div>
+
+                </div>
+
+                <div class="about mx-5" id="carrer-focus">
+                    <h3 class="h3 text-uppercase font-weight-bold">
+                        Mục tiêu.
+                    </h3>
+                    <div class="infomation mt-5">
+                        <div class="infomation-paragraph">
+                            <ul class="list-unstyled">
+                                <li>
+                                    Áp dụng kiến thức đã được học vào các dự án thực tế, hoàn thành công việc được phân
+                                    công.
+                                </li>
+
+                                <li>
+                                    Học hỏi, nâng cao kinh nghiệm làm việc của bản thân.
+                                </li>
+
+                                <li>
+                                    Thành thạo ít nhất 1 ngôn ngữ lập trình.
+                                </li>
+
+                                <li>
+                                    Tiếp tục học thêm các ngôn ngữ lập trình khác để tiếp tục trở thành Full Stack
+                                    Devoloper.
+                                </li>
+                            </ul>
                         </div>
-                        <div class="overlay"></div>
+
+                        <div class="line my-5"></div>
                     </div>
                 </div>
+
+                <div class="about mx-5" id="skills">
+                    <h3 class="h3 text-uppercase font-weight-bold">
+                        Kỹ năng.
+                    </h3>
+                    <div class="infomation mt-5">
+                        <div class="chart-wrapper d-flex flex-column flex-lg-row justify-content-around">
+                            <div id="chart-part-one">
+                                <div id="programing-chart"></div>
+                                <p class="text-center">Kỹ năng lập trình</p>
+                            </div>
+                            <div id="chart-part-two">
+                                <div id="others-chart"></div>
+                                <p class="text-center">Kỹ năng khác</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="line my-5"></div>
+
+                </div>
+
+                <!-- <div class="about mx-5" id="exp">
+                    <h3 class="h3 text-uppercase font-weight-bold">
+                        Kinh nghiệm.
+                    </h3>
+                    <div class="infomation mt-5">
+                        <div class="infomation-paragraph">
+                            <ul class="list-unstyled">
+                                <li>
+                                    Áp dụng kiến thức đã được học vào các dự án thực tế, hoàn thành công việc được phân
+                                    công.
+                                </li>
+
+                                <li>
+                                    Học hỏi, nâng cao kinh nghiệm làm việc của bản thân.
+                                </li>
+
+                                <li>
+                                    Thành thạo ít nhất 1 ngôn ngữ lập trình.
+                                </li>
+
+                                <li>
+                                    Tiếp tục học thêm các ngôn ngữ lập trình khác để tiếp tục trở thành Full Stack
+                                    Devoloper.
+                                </li>
+                            </ul>
+                        </div>
+
+                        <div class="line my-5"></div>
+                    </div>
+                </div> -->
             </div>
-        </div>
     </section>
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.9"></script>
+    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
     <script src="js/main.js"></script>
 </body>
 
