--- a/bootstrap_project/portfolio/index.html
+++ b/bootstrap_project/portfolio/index.html
@@ -222,15 +222,15 @@
                     <h3 class="h3 text-uppercase font-weight-bold">
                         Kỹ năng.
                     </h3>
-                    <div class="infomation d-flex flex-column mt-5">
+                    <div class="infomation d-flex flex-column align-items-center mt-5">
                         <div class="chart-wrapper d-flex flex-column flex-lg-row justify-content-around">
                             <div class="chart chart-one my-5">
-                                <canvas id="html-chart" width="200px" height="150"></canvas>
+                                <canvas id="html-chart" width="250px" height="150"></canvas>
                                 <p class="text-center mt-3">HTML</p>
                             </div>
 
                             <div class="chart chart-two my-5">
-                                <canvas id="css-chart" width="200px" height="150"></canvas>
+                                <canvas id="css-chart" width="250px" height="150"></canvas>
                                 <p class="text-center mt-3">CSS</p>
                             </div>
 
@@ -238,7 +238,7 @@
 
                         <div class="chart-wrapper d-flex flex-column flex-lg-row justify-content-around">
                             <div class="chart chart-four my-5">
-                                <canvas id="js-chart" width="200px" height="150"></canvas>
+                                <canvas id="js-chart" width="250px" height="150"></canvas>
                                 <p class="text-center mt-3">JS</p>
                             </div>
 
