update radar chart

--- a/bootstrap_project/portfolio/index.html
+++ b/bootstrap_project/portfolio/index.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" href="image/avatar.png">
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
     <link href="css/all.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
-    <title>Document</title>
+    <title>&lt;Cody Here&nbsp;&sol;&gt;</title>
 </head>
 
 <body>
@@ -33,6 +34,34 @@
                         </div>
                     </div>
                 </nav> -->
+
+                <nav class="navbar navbar-expand-xl navbar-light bg-light justify-content-end">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse"
+                        data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+                        <div class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#objective">Objective</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#skills">Skills</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Experience</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#portfolio">Portfolio</a>
+                            </li>
+                            </ul>
+                        </div>
+                </nav>
+
                 <div class="name text-center mt-5">
                     <h1 class="h1">
                         <span class="typing text-uppercase"></span></br>
@@ -78,7 +107,94 @@
 
             </div>
             <div id="second-part" class="col-md-7 ml-auto p-0">
-                <div class="project mb-5" id="project-anchor">
+
+                <div class="about mx-5 mt-5" id="about-me">
+                    <h3 class="h3 text-uppercase font-weight-bold">
+                        Giới thiệu.
+                    </h3>
+
+                    <div class="infomation mt-5">
+                        <div class="infomation-paragraph">
+                            <ul class="list-unstyled">
+                                <li>
+                                    <span class="label font-weight-bold">Họ tên:</span> Phạm Công Định
+                                </li>
+
+                                <li>
+                                    <span class="label font-weight-bold">Ngày sinh:</span> 02/03/1995
+                                </li>
+
+                                <li>
+                                    <span class="label font-weight-bold">Giới tính:</span> Nam
+                                </li>
+
+                                <li>
+                                    <span class="label font-weight-bold">Điện thoại:</span> 0365304675
+                                </li>
+
+                                <li>
+                                    <span class="label font-weight-bold">Email:</span> congdinh2395@gmail.com
+                                </li>
+
+                                <li>
+                                    <span class="label font-weight-bold">Địa chỉ:</span> 38/211 Khương Trung, Thanh
+                                    Xuân, Hà
+                                    Nội
+                                </li>
+                            </ul>
+
+                        </div>
+                    </div>
+
+                    <div class="line mt-5"></div>
+
+                </div>
+
+                <div class="about mx-5 pt-5" id="objective">
+                    <h3 class="h3 text-uppercase font-weight-bold">
+                        Mục tiêu.
+                    </h3>
+                    <div class="infomation mt-5">
+                        <div class="infomation-paragraph">
+                            <ul class="list-unstyled">
+                                <li>
+                                    Áp dụng kiến thức đã được học vào các dự án thực tế, hoàn thành công việc được phân
+                                    công.
+                                </li>
+
+                                <li>
+                                    Học hỏi, nâng cao kinh nghiệm làm việc của bản thân.
+                                </li>
+
+                                <li>
+                                    Thành thạo ít nhất 1 ngôn ngữ lập trình.
+                                </li>
+
+                                <li>
+                                    Tiếp tục học thêm các ngôn ngữ lập trình khác để tiếp tục trở thành Full Stack
+                                    Devoloper.
+                                </li>
+                            </ul>
+                        </div>
+
+                        <div class="line mt-5"></div>
+                    </div>
+                </div>
+
+                <div class="about mx-5 pt-5" id="skills">
+                    <h3 class="h3 text-uppercase font-weight-bold">
+                        Kỹ năng.
+                    </h3>
+
+                    <canvas id="myChart" class="mt-5"></canvas>
+                    <div class="line mt-5"></div>
+                </div>
+
+
+                <div class="project mb-5 pt-5" id="portfolio">
+                    <h3 class="h3 text-uppercase font-weight-bold mx-5 mb-5">
+                        Portfolio.
+                    </h3>
                     <div class="project-item project-one position-relative">
                         <div class="number-order text">
                             01.
@@ -120,13 +236,13 @@
                         </div>
                         <img src="image/animation_card.png" alt="login_register_form"
                             class="project-img project-img-four img-fluid my-5 rounded-lg">
+                        <a href="https://cody0203.github.io/dom-projects/form/html/index.html" class="project-link position-absolute">Animation
+                            Greating Card</a>
 
                         <div class="technology text-center text">
                             (HTML, CSS)
                         </div>
-                        <div class="overlay"><a href="https://cody0203.github.io/dom-projects/form/html/index.html"
-                                class="project-link position-absolute">Animation
-                                Greating Card</a></div>
+                        <div class="overlay"></div>
                     </div>
 
                     <div class="project-item project-three position-relative">
@@ -144,112 +260,6 @@
                     </div>
 
                 </div>
-
-                <div class="about mx-5" id="about-me">
-                    <h3 class="h3 text-uppercase font-weight-bold">
-                        Giới thiệu.
-                    </h3>
-
-                    <div class="infomation mt-5">
-                        <div class="infomation-paragraph">
-                            <ul class="list-unstyled">
-                                <li>
-                                    <span class="label font-weight-bold">Họ tên:</span> Phạm Công Định
-                                </li>
-
-                                <li>
-                                    <span class="label font-weight-bold">Ngày sinh:</span> 02/03/1995
-                                </li>
-
-                                <li>
-                                    <span class="label font-weight-bold">Giới tính:</span> Nam
-                                </li>
-
-                                <li>
-                                    <span class="label font-weight-bold">Điện thoại:</span> 0365304675
-                                </li>
-
-                                <li>
-                                    <span class="label font-weight-bold">Email:</span> congdinh2395@gmail.com
-                                </li>
-
-                                <li>
-                                    <span class="label font-weight-bold">Địa chỉ:</span> 38/211 Khương Trung, Thanh
-                                    Xuân, Hà
-                                    Nội
-                                </li>
-                            </ul>
-
-                        </div>
-                    </div>
-
-                    <div class="line my-5"></div>
-
-                </div>
-
-                <div class="about mx-5" id="carrer-focus">
-                    <h3 class="h3 text-uppercase font-weight-bold">
-                        Mục tiêu.
-                    </h3>
-                    <div class="infomation mt-5">
-                        <div class="infomation-paragraph">
-                            <ul class="list-unstyled">
-                                <li>
-                                    Áp dụng kiến thức đã được học vào các dự án thực tế, hoàn thành công việc được phân
-                                    công.
-                                </li>
-
-                                <li>
-                                    Học hỏi, nâng cao kinh nghiệm làm việc của bản thân.
-                                </li>
-
-                                <li>
-                                    Thành thạo ít nhất 1 ngôn ngữ lập trình.
-                                </li>
-
-                                <li>
-                                    Tiếp tục học thêm các ngôn ngữ lập trình khác để tiếp tục trở thành Full Stack
-                                    Devoloper.
-                                </li>
-                            </ul>
-                        </div>
-
-                        <div class="line my-5"></div>
-                    </div>
-                </div>
-
-                <div class="about mx-5" id="skills">
-                    <h3 class="h3 text-uppercase font-weight-bold">
-                        Kỹ năng.
-                    </h3>
-                    <div class="infomation d-flex flex-column align-items-center mt-5">
-                        <div class="chart-wrapper d-flex flex-column flex-lg-row justify-content-around">
-                            <div class="chart chart-one my-5">
-                                <canvas id="html-chart" width="250px" height="150"></canvas>
-                                <p class="text-center mt-3">HTML</p>
-                            </div>
-
-                            <div class="chart chart-two my-5">
-                                <canvas id="css-chart" width="250px" height="150"></canvas>
-                                <p class="text-center mt-3">CSS</p>
-                            </div>
-
-                        </div>
-
-                        <div class="chart-wrapper d-flex flex-column flex-lg-row justify-content-around">
-                            <div class="chart chart-four my-5">
-                                <canvas id="js-chart" width="250px" height="150"></canvas>
-                                <p class="text-center mt-3">JS</p>
-                            </div>
-
-                            <div class="chart chart-five my-5">
-                                <canvas id="jquery-chart" width="250px" height="150"></canvas>
-                                <p class="text-center mt-3">Jquery</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="line my-5"></div>
 
             </div>
 
