update single post sidebar

--- a/bootstrap_project/cut-html-css/index.html
+++ b/bootstrap_project/cut-html-css/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <link rel="icon" href="image/favicon.png">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"
         type="text/css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
         integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css" type="text/css">
-    <title>Hello, world!</title>
+    <title>minimø</title>
 </head>
 
 <body>
@@ -48,8 +48,8 @@
     <main>
         <section class="main-content container px-sm-0">
             <div class="container description">
-                <h3><a href="#" class="h3 text-uppercase">photodiary</a></h3>
-                <h2><a href="#" class="h2">The perfect weekend getaway</a></h2>
+                <h3 class="h3"><a href="#" class="h3 text-uppercase">photodiary</a></h3>
+                <h2 class="first-h2 h2"><a href="#" class="h2">The perfect weekend getaway</a></h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
                     et
                     dolore magna
@@ -183,7 +183,7 @@
             </div>
         </section>
 
-        <section class="sign-up-for-newsletter container-fluid d-flex justify-content-center">
+        <section class="break-container sign-up-for-newsletter container-fluid d-flex justify-content-center">
             <div
                 class="sign-up-for-newsletter-content d-flex flex-column justify-content-center align-items-center h-100">
                 <h2 class="h2">Sign up for our newsletter!</h2>
@@ -230,11 +230,11 @@
                             </div>
 
                             <div class="item-tag">
-                                    <h3 class="h3 text-uppercase"><a href="#" class="h3 item-tag-anchor">Lifestyle</a></h3>
+                                <h3 class="h3 text-uppercase"><a href="#" class="h3 item-tag-anchor">Lifestyle</a></h3>
                             </div>
 
                             <div class="item-title">
-                                    <h2 class="h2"><a href="#" class="h2 item-title-anchor">Cold winter days</a></h2>
+                                <h2 class="h2"><a href="#" class="h2 item-title-anchor">Cold winter days</a></h2>
                             </div>
 
                             <div class="item-short-description">
