--- a/bootstrap_project/cut-html-css/index.html
+++ b/bootstrap_project/cut-html-css/index.html
@@ -17,7 +17,7 @@
 <body>
     <header class="container px-sm-0">
         <nav class="navbar navbar-expand-lg navbar-light bg-light text-uppercase">
-            <a class="navbar-brand" href="#">minimø</a>
+            <a class="navbar-brand" href="index.html">minimø</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -41,7 +41,7 @@
         </nav>
 
         <div class="banner">
-            <img src="image/banner.png" alt="banner" class="img-fluid">
+            <a href="single-post-sidebar.html"><img src="image/banner.png" alt="banner" class="img-fluid"></a>
         </div>
     </header>
 
@@ -49,7 +49,7 @@
         <section class="main-content container px-sm-0">
             <div class="container description">
                 <h3 class="h3"><a href="#" class="h3 text-uppercase">photodiary</a></h3>
-                <h2 class="first-h2 h2"><a href="#" class="h2">The perfect weekend getaway</a></h2>
+                <h2 class="first-h2 h2"><a href="single-post-sidebar.html" class="h2">The perfect weekend getaway</a></h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
                     et
                     dolore magna
@@ -80,7 +80,7 @@
                     <div class="col-md-6">
                         <div class="item">
                             <div class="item-img">
-                                <a href="#" class="item-img-anchor"><img src="image/item-img-1.png" alt="item-img-1"
+                                <a href="single-post-sidebar.html" class="item-img-anchor"><img src="image/item-img-1.png" alt="item-img-1"
                                         class="img-fluid"></a>
                             </div>
 
@@ -89,7 +89,7 @@
                             </div>
 
                             <div class="item-title">
-                                <h2 class="h2"><a href="#" class="h2 item-title-anchor">More than just a music
+                                <h2 class="h2"><a href="single-post-sidebar.html" class="h2 item-title-anchor">More than just a music
                                         festival</a></h2>
                             </div>
 
@@ -105,7 +105,7 @@
                     <div class="col-md-6">
                         <div class="item">
                             <div class="item-img">
-                                <a href="#" class="item-img-anchor"><img src="image/item-img-2.png" alt="item-img-1"
+                                <a href="single-post-sidebar.html" class="item-img-anchor"><img src="image/item-img-2.png" alt="item-img-1"
                                         class="img-fluid"></a>
                             </div>
 
@@ -114,7 +114,7 @@
                             </div>
 
                             <div class="item-title">
-                                <h2 class="h2"><a href="#" class="h2 item-title-anchor">Life tastes better with
+                                <h2 class="h2"><a href="single-post-sidebar.html" class="h2 item-title-anchor">Life tastes better with
                                         coffee</a>
                                 </h2>
                             </div>
@@ -132,7 +132,7 @@
                     <div class="col-md-6">
                         <div class="item">
                             <div class="item-img">
-                                <a href="#" class="item-img-anchor"><img src="image/item-img-3.png" alt="item-img-1"
+                                <a href="single-post-sidebar.html" class="item-img-anchor"><img src="image/item-img-3.png" alt="item-img-1"
                                         class="img-fluid"></a>
                             </div>
 
@@ -141,7 +141,7 @@
                             </div>
 
                             <div class="item-title">
-                                <h2 class="h2"><a href="#" class="h2 item-title-anchor">American dream</a></h2>
+                                <h2 class="h2"><a href="single-post-sidebar.html" class="h2 item-title-anchor">American dream</a></h2>
                             </div>
 
                             <div class="item-short-description">
@@ -157,7 +157,7 @@
                     <div class="col-md-6">
                         <div class="item">
                             <div class="item-img">
-                                <a href="#" class="item-img-anchor"><img src="image/item-img-4.png" alt="item-img-1"
+                                <a href="single-post-sidebar.html" class="item-img-anchor"><img src="image/item-img-4.png" alt="item-img-1"
                                         class="img-fluid"></a>
                             </div>
 
@@ -166,7 +166,7 @@
                             </div>
 
                             <div class="item-title">
-                                <h2 class="h2"><a href="#" class="h2 item-title-anchor">A day exploring the Alps</a>
+                                <h2 class="h2"><a href="single-post-sidebar.html" class="h2 item-title-anchor">A day exploring the Alps</a>
                                 </h2>
                             </div>
 
@@ -201,7 +201,7 @@
                     <div class="col-md-6">
                         <div class="item">
                             <div class="item-img">
-                                <a href="#" class="item-img-anchor"><img src="image/item-img-5.png" alt="item-img-5"
+                                <a href="single-post-sidebar.html" class="item-img-anchor"><img src="image/item-img-5.png" alt="item-img-5"
                                         class="img-fluid"></a>
                             </div>
 
@@ -210,7 +210,7 @@
                             </div>
 
                             <div class="item-title">
-                                <h2 class="h2"><a href="#" class="h2 item-title-anchor">Top 10 song for running</a></h2>
+                                <h2 class="h2"><a href="single-post-sidebar.html" class="h2 item-title-anchor">Top 10 song for running</a></h2>
                             </div>
 
                             <div class="item-short-description">
@@ -225,7 +225,7 @@
                     <div class="col-md-6">
                         <div class="item">
                             <div class="item-img">
-                                <a href="#" class="item-img-anchor"><img src="image/item-img-6.png" alt="item-img-6"
+                                <a href="single-post-sidebar.html" class="item-img-anchor"><img src="image/item-img-6.png" alt="item-img-6"
                                         class="img-fluid"></a>
                             </div>
 
@@ -234,7 +234,7 @@
                             </div>
 
                             <div class="item-title">
-                                <h2 class="h2"><a href="#" class="h2 item-title-anchor">Cold winter days</a></h2>
+                                <h2 class="h2"><a href="single-post-sidebar.html" class="h2 item-title-anchor">Cold winter days</a></h2>
                             </div>
 
                             <div class="item-short-description">
@@ -249,7 +249,7 @@
                 </div>
 
                 <div class="load-more d-flex justify-content-center">
-                    <button class="load-more-btn text-center">Load more</button>
+                    <a href="single-post-sidebar.html"><button class="load-more-btn text-center">Load more</button></a>
                 </div>
         </section>
     </main>
