--- a/bootstrap_project/cut-html-css/single-post-sidebar.html
+++ b/bootstrap_project/cut-html-css/single-post-sidebar.html
@@ -18,7 +18,7 @@
 <body>
     <header class="container px-sm-0">
         <nav class="navbar navbar-expand-lg navbar-light bg-light text-uppercase">
-            <a class="navbar-brand" href="#">minimø</a>
+            <a class="navbar-brand" href="index.html">minimø</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -42,7 +42,7 @@
         </nav>
 
         <div class="banner">
-            <img src="image/banner.png" alt="banner" class="img-fluid">
+            <a href="single-post-sidebar.html"><img src="image/banner.png" alt="banner" class="img-fluid"></a>
         </div>
     </header>
 
