fix top posts title display

--- a/bootstrap_project/cut-html-css/single-post-sidebar.html
+++ b/bootstrap_project/cut-html-css/single-post-sidebar.html
@@ -145,27 +145,27 @@
                             </div>
                             <div class="item">
                                 <ul>
-                                    <li class="item-title">A day exploring the Alps
+                                    <li class="item-title d-flex"><a href="#">A day exploring the Alps</a>
                                     </li>
-                                    <li class="comment-count text-uppercase">24 comments
-                                    </li>
-                                </ul>
-                            </div>
-
-                            <div class="item">
-                                <ul>
-                                    <li class="item-title">American dream
-                                    </li>
-                                    <li class="comment-count text-uppercase">19 comments
+                                    <li class="comment-count d-flex text-uppercase">24 comments
                                     </li>
                                 </ul>
                             </div>
 
                             <div class="item">
                                 <ul>
-                                    <li class="item-title">Cold winter days
+                                    <li class="item-title d-flex"><a href="#">American dream</a>
                                     </li>
-                                    <li class="comment-count text-uppercase">15 comments
+                                    <li class="comment-count d-flex text-uppercase">19 comments
+                                    </li>
+                                </ul>
+                            </div>
+
+                            <div class="item">
+                                <ul>
+                                    <li class="item-title d-flex"><a href="#">Cold winter days</a>
+                                    </li>
+                                    <li class="comment-count d-flex text-uppercase">15 comments
                                     </li>
                                 </ul>
                             </div>
