fix display suggest container

--- a/bootstrap_project/cut-html-css/single-post-sidebar.html
+++ b/bootstrap_project/cut-html-css/single-post-sidebar.html
@@ -183,8 +183,8 @@
 
         <section class="break-container suggest px-sm-0 container-fluid h-100 d-flex flex-column">
             <div class="container">
-                <h3 class="h3 suggest-tag text-uppercase">you may also like</h3>
-                <div class="suggest-collection mh-100 d-flex">
+                <h3 class="h3 suggest-tag text-center text-lg-left text-uppercase">you may also like</h3>
+                <div class="suggest-collection mh-100 d-flex flex-column flex-lg-row align-items-center">
                     <div class="suggest-items">
                         <a href=""><img src="image/suggest-item-img-1.png" alt="suggest-item-img-1"
                                 class="img-fluid"></a>
