update tab highlight and change content

--- a/bootstrap_project/xpider_landing_page/index.html
+++ b/bootstrap_project/xpider_landing_page/index.html
@@ -101,8 +101,8 @@
 
       <div class="row">
         <div class="technology mx-auto col-md-10 px-md-0">
-          <div class="row d-flex justify-content-md-between">
-            <div class="technology-tabs text-center col-md-3 px-0">
+          <div class="row d-flex justify-content-md-between mx-0">
+            <div class="technology-tabs text-center col-md-3 px-0" id="technology-tab-1">
               <div class="technology-text">
                 <img src="image/drag.png" alt="drag" class="img-fluid">
               </div>
@@ -111,7 +111,7 @@
               </div>
             </div>
 
-            <div class="technology-tabs text-center col-md-3 px-0">
+            <div class="technology-tabs text-center mt-3 mt-md-0 col-md-3 px-0"  id="technology-tab-2">
               <div class="technology-text">
                 <img src="image/settings.png" alt="drag" class="img-fluid">
               </div>
@@ -120,7 +120,7 @@
               </div>
             </div>
 
-            <div class="technology-tabs text-center col-md-3 px-0">
+            <div class="technology-tabs text-center mt-3 mt-md-0 col-md-3 px-0"  id="technology-tab-3">
               <div class="technology-text">
                 <img src="image/responsive.png" alt="drag" class="img-fluid">
               </div>
